--- a/process_SNPs/dwld_new_bams_redux.ipynb
+++ b/process_SNPs/dwld_new_bams_redux.ipynb
@@ -6928,140 +6928,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "remainder_dwld_cmds = ['aws s3 cp ' + s3_path_naive + x + '.homo.Aligned.out.sorted.bam .' for x in s3_naive_inter]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/O3_B002090.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/M13_B001554.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/P6_B003103.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/I2_B002090.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/G1_B002090.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/A10_B003187.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/I10_B003647.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/N3_B003643.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/D18_B001470.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/M1_B002090.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/L21_B000580.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/O10_B003187.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/J18_B003588.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/J19_B003643.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/A17_B003187.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/J4_B002090.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/C18_B001460.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/F9_B003191.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/A9_B003187.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/M9_B003191.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/D20_B001470.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/B19_B003588.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/N9_B003643.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/P10_B003191.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/O12_B003187.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/L19_B003126.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/P5_B000422.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/H2_B002090.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/N8_B003643.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/L13_B003129.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/E6_B003654.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/P4_B002090.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/J15_B000422.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/D9_B001470.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/E4_B002090.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/B20_B003588.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/F4_B002090.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/E1_B003654.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/B4_B002090.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/H17_B000860.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/N4_B003643.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/B3_B002090.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/J19_B003588.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/C10_B003129.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/A19_B003187.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/E1_B002090.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/F10_B003191.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/B4_B001010.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/A9_B001557.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/F19_B003187.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/G13_B000860.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/B2_B002090.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/F16_B003643.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/I17_B003647.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/K2_B002090.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/N11_B003643.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/F21_B001464.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/H10_B003071.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/E5_B003654.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/F17_B003187.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/I1_B002090.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/F18_B003643.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/D13_B001470.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/F12_B003187.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/K1_B002090.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/N3_B003116.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/D21_B001470.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/M12_B003191.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/F13_B003187.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/N14_B003643.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/I19_B003647.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/P17_B003191.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/O22_B003528.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/H17_B003119.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/D3_B002090.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/G22_B003103.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/F11_B003187.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/J2_B002090.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/M3_B002090.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/D10_B001470.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/I11_B003647.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/N2_B002090.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/O20_B001558.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/A13_B003187.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/P3_B002090.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/L3_B002090.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/D2_B002073.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/E7_B003654.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/N7_B003643.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/C5_B003659.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/N13_B003119.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/J18_B003643.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/F12_B003191.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/L10_B003116.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/A3_B002090.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/F19_B003643.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/E19_B003930.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/L17_B003129.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/O18_B001554.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/I16_B003647.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/N12_B003643.homo.Aligned.out.sorted.bam .',\n",
-       " 'aws s3 cp s3://darmanis-group/singlecell_lungadeno/rawdata/fastq_all/rename_results/N6_B003643.homo.Aligned.out.sorted.bam .']"
+       "102"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "['aws s3 cp ' + s3_path_naive + x + '.homo.Aligned.out.sorted.bam .' for x in s3_naive_inter]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'remainder_dwld_cmds' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-23-aaff7bc913af>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mremainder_dwld_cmds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'remainder_dwld_cmds' is not defined"
-     ]
     }
    ],
    "source": [
