--- a/gvcf/breakdown_by_gene.ipynb
+++ b/gvcf/breakdown_by_gene.ipynb
@@ -5339,10 +5339,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#////////////////////////////////////////////////////////////////////\n",
+    "#////////////////////////////////////////////////////////////////////\n",
+    "#////////////////////////////////////////////////////////////////////"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# the problem is that we're missing some genes here\n",
+    "    # these guys we didnt even search for \n",
+    "BRIP\n",
+    "TFG\n",
+    "NKX21\n",
+    "CD74"
+   ]
   }
  ],
  "metadata": {
